--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,17 @@ html {
         <p>That's it <span class="emoji">🌸</span></p>
       </footer>  
 
+    
+<script>
+    document.addEventListener('contextmenu', event => event.preventDefault());
+document.addEventListener('keydown', event => {
+  if (event.key === 'F12' || (event.ctrlKey && event.shiftKey && event.key === 'I')) {
+    event.preventDefault();
+  }
+});
+
+</script>
+
       <script>
         // Script for scrolling using arrow keys
         window.addEventListener('keydown', function(e) {
